feat: fix fullscreen

--- a/client/src/room.module.scss
+++ b/client/src/room.module.scss
@@ -248,6 +248,20 @@
   user-select: none;
   border: 1px solid var(--line-soft);
   box-shadow: var(--shadow-md);
+
+  &.fullscreen-pseudo {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    height: 100dvh;
+    z-index: 9999;
+    border-radius: 0;
+    border: none;
+    margin: 0;
+    background: #fff;
+  }
 }
 
 .canvas {
